# ex-cog-dev

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  REVIEW-NOTES.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/rules/: descriptions-and-discoverability.md  explain-changes.md  explaining-changes.md  github-references.md  mcp-interface-contract.md  no-drive-by-edits.md  no-sensitive-data-in-repo.md  no-speculative-structure.md  rule-design.md  shipped-skill-config.md  skill-design.md  skill-verification.md  trace-changes-to-the-request.md  vasana-naming.md  verify-claims.md
.github/scripts/: check_version_bump.py  test_check_version_bump.py
.github/workflows/: guard-main-settings.yml  mcp-smoke-test.yml  sync-cloud-plugins.yml  sync-env-branches.yml  unit-tests.yml  version-bump-guard.yml
makers-toolkit/.claude-plugin/: plugin.json
makers-toolkit/skills/intrinsic-prompt-design/: SKILL.md
makers-toolkit/skills/skill-activation-experiments/: SKILL.md
makers-toolkit/skills/skill-activation-testing/: SKILL.md
makers-toolkit/skills/system-pilot/: SKILL.md
research-toolkit/: .mcp.json  CLAUDE.md  INTEGRATION-BACKLOG.md  LICENSE  README.md  TEST-RESULTS.md  THIRD-PARTY-LICENSES.md
research-toolkit/.claude-plugin/: plugin.json
research-toolkit/agents/: adversarial-critic.md  falsifier.md  investigation-orchestrator.md  negative-dialectical-spiral.md  release-tagger.md  stonk.md
research-toolkit/commands/: substack-extract.md
research-toolkit/docs/: PORTABILITY-TODO.md  negative-dialectical-spiral-README.md
research-toolkit/lib/: brainstorm.py  test_brainstorm.py
research-toolkit/mcp-servers/financial-mcp/: ANTHROPIC_UX_INTEGRATION.md  CLAUDE.md  DEMO-GUIDE.md  DEPLOYMENT_PLAN.md  coding-standard.md  debug_wrapper.py  financial_server.py  pyproject.toml  requirements.txt  test_indicators.py  test_units.py  test_validation.py  tool_definitions.py
research-toolkit/mcp-servers/financial-mcp/cache/: __init__.py  config.py  manager.py
research-toolkit/mcp-servers/financial-mcp/implementations/: __init__.py  fetch_ticker.py  force_fetch_ticker.py  get_stock_analysis.py  get_stock_history.py  get_stock_info.py  get_stock_price.py  get_technical_indicators.py  utils.py
research-toolkit/mcp-servers/financial-mcp/implementations/validation/: __init__.py  ticker_cache.py  ticker_validator.py
research-toolkit/mcp-servers/portfolio-mcp/: portfolio_server.py  pyproject.toml
research-toolkit/mcp-servers/portfolio-mcp/scripts/: portfolio-snap.py
research-toolkit/mcp-servers/transparency-mcp/: pyproject.toml  transparency_server.py
research-toolkit/reference/: ecosystem-positioning.md  topic-based-escalation.md
research-toolkit/skills/: test_skill_structure.py
research-toolkit/skills/cui-bono/: 01_INVESTIGATION_METHODOLOGY.md  02_METHODOLOGY_REFERENCE.md  02_QUICK_REFERENCE.md  SKILL.md  SOURCE_CLASSIFICATIONS.md  SOURCE_DIVERSITY_FRAMEWORK.md
research-toolkit/skills/deep-investigation-protocol/: FALSIFICATION-CRITERIA.md  SKILL.md
research-toolkit/skills/dev-job-defense-ties/: ACTIVATION-TEST.md  ARCHITECTURE.md  SKILL.md  test_screen_efficiency.py
research-toolkit/skills/dialectic-spiral/: SKILL.md
research-toolkit/skills/frame-rotation/: SKILL.md
research-toolkit/skills/iterative-verification/: SKILL.md
research-toolkit/skills/macro-monitor/: SKILL.md
research-toolkit/skills/manufactured-consensus-detection/: SKILL.md
research-toolkit/skills/portfolio-reader/: SKILL.md
research-toolkit/skills/research/: SKILL.md
research-toolkit/skills/source-omission-analysis/: SKILL.md
security-toolkit/: README.md
security-toolkit/.claude-plugin/: plugin.json
security-toolkit/commands/: pr-merge-guard.md
security-toolkit/hooks/: announce-pr-merge-guard.sh  announce-pr-merge-guard.test.sh  block-dangerous-git.sh  block-dangerous-git.test.sh  block-dc-config.sh  block-dc-execute.sh  block-dc.test.sh  detect-prompt-injection.sh  detect-prompt-injection.test.sh  hooks.json
security-toolkit/skills/: test_skill_structure.py
vasana-system/: .mcp.json  AXIOMS.md  CLAUDE.md  DESIGN-pattern-library-relocation.md  HANDOFF-pattern-library-relocation-2026-05-21.md  INTEGRATION-STATUS.md  KNOWN-ISSUES.md  README.md
vasana-system/.claude-plugin/: plugin.json
vasana-system/agents/: self-improvement-agent.md
vasana-system/commands/: pattern-library.md
vasana-system/hooks/: count-skill-firings.sh  count-skill-firings.test.sh  hooks.json  vasana.sh
vasana-system/mcp-servers/edge-graph/: Dockerfile  README.md  THEORY-NOTES.md  THIRD-PARTY-LICENSES.md  VOCABULARY-EMERGENCE-DESIGN.md  manual_test.py  pyproject.toml  test_basic.py
vasana-system/mcp-servers/edge-graph/src/edge_graph/: __init__.py  __main__.py  backend.py  models.py  server.py
vasana-system/mcp-servers/edge-graph/tests/: test_edge_weight.py
vasana-system/mcp-servers/relational-memory/: .dockerignore  Dockerfile  README.md  USAGE.md  manual_test.py  pyproject.toml  test_basic.py  test_persistence_warning.py
vasana-system/mcp-servers/relational-memory/src/claude_relational_memory/: __init__.py  backend.py  claude_agent.py  models.py  server.py
vasana-system/mcp-servers/relational-memory/tests/: __init__.py  test_mcp_integration.py
vasana-system/skills/: test_skill_structure.py
(+131 files in other folders)
