[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio-mcp"
version = "0.1.0"
description = "Portfolio snapshot MCP server — Tradeville + IBKR with permission-separated tools"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "requests>=2.28.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
portfolio-mcp = "portfolio_server:main_sync"

[tool.hatch.build]
include = ["portfolio_server.py", "scripts/portfolio-snap.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "browser: marks tests that require a real browser (deselect with '-m not browser')",
]
