[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transparency-mcp"
version = "0.1.0"
description = "Public transparency data MCP server — GovTrack, World Bank, ProPublica Nonprofit Explorer"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
transparency-mcp = "transparency_server:main_sync"

[tool.hatch.build]
include = ["transparency_server.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
